--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   persistent_bottom_nav_bar: ^4.0.2
   firebase_auth: ^3.3.20
   google_fonts: ^3.0.1
+  flutter_boxicons: ^3.0.0
 
 dev_dependencies:
   flutter_test:
