--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_boxicons: ^3.0.0
   pie_chart: ^5.3.2
+  bloc: ^8.0.3
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
